tests/ui/mut/mutable-enum-indirect.stderr
error[E0277]: `NoSync` cannot be shared between threads safely
  --> $DIR/mutable-enum-indirect.rs:17:9
   |
LL |     bar(&x);
   |     --- ^^ `NoSync` cannot be shared between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `&Foo`, the trait `Sync` is not implemented for `NoSync`
note: required because it appears within the type `Foo`
  --> $DIR/mutable-enum-indirect.rs:11:6
   |
LL | enum Foo { A(NoSync) }
   |      ^^^
   = note: required because it appears within the type `&Foo`
note: required by a bound in `bar`
  --> $DIR/mutable-enum-indirect.rs:13:11
   |
LL | fn bar<T: Sync>(_: T) {}
   |           ^^^^ required by this bound in `bar`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
